[gd_scene load_steps=5 format=3 uid="uid://ene4owqu00qw"]

[ext_resource type="Script" uid="uid://bvhkus07emcn5" path="res://UI/menu.gd" id="1_0h2wq"]
[ext_resource type="PackedScene" uid="uid://nlrqw4wdp385" path="res://UI/bg.tscn" id="2_wfiwe"]
[ext_resource type="AudioStream" uid="uid://343x8hpxmcnl" path="res://Assets/Aseprite/sound/music/medieval-fantasy-142837.mp3" id="3_4hkxj"]
[ext_resource type="AudioStream" uid="uid://dpymq2yxkh0k2" path="res://Assets/Aseprite/sound/SFX/click-21156.mp3" id="4_qmqfe"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_0h2wq")

[node name="BtnPlay" type="Button" parent="."]
offset_left = 407.0
offset_top = 180.0
offset_right = 750.0
offset_bottom = 322.0
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="BtnQuit" type="Button" parent="."]
offset_left = 407.0
offset_top = 354.0
offset_right = 750.0
offset_bottom = 496.0
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="BG" parent="." instance=ExtResource("2_wfiwe")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4hkxj")
volume_db = -25.0
autoplay = true

[node name="BtnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qmqfe")
volume_db = -15.0

[connection signal="pressed" from="BtnPlay" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="BtnQuit" to="." method="_on_btn_quit_pressed"]
